<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_home"
        android:title="@string/navigation_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_buscar"
        android:title="@string/navigation_buscar"
        app:showAsAction="always" />
    <item
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_publicar"
        android:title="@string/navigation_publicar"
        app:showAsAction="always" />
    <item
        android:id="@+id/perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_perfil"
        android:title="@string/navigation_perfil"
        app:showAsAction="always" />
</menu>