<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Registro">

    <TextView
        android:id="@+id/bienvenidaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/tituloinstadam"
        android:text="@string/registrate"
        android:textAllCaps="false"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/emailRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/icon_persona"
        android:ems="10"
        android:hint="@string/email"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/userNameRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/icon_nombre_usuario"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/passwordRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/icon_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/checkPasswrdRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/icon_seguridad"
        android:ems="10"
        android:hint="@string/repetircontrasena"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/registrarseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/rosaPersonalizado"
        android:padding="15dp"
        android:text="@string/registro"
        android:textColor="#F3E5F5" />

</LinearLayout>