<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditarPerfilFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/tituloinstadam"
        android:gravity="center"
        android:text="@string/datosGenerales"
        android:textSize="65sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/editarNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:drawableStart="@drawable/icon_nombre_usuario"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editarDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:drawableStart="@drawable/icon_descripcion"
        android:ems="10"
        android:hint="@string/presentacionDescripcion"
        android:inputType="text"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/generoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/datosGenerales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:backgroundTint="@color/rosaPersonalizado"
        android:padding="12dp"
        android:text="@string/confirmar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/tituloinstadam"
        android:gravity="center"
        android:text="@string/datosImportantes"
        android:textSize="60sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/editarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:drawableStart="@drawable/icon_persona"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:drawableStart="@drawable/icon_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/datosImportantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:backgroundTint="@color/rosaPersonalizado"
        android:padding="12dp"
        android:text="@string/confirmar" />


</LinearLayout>