<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PerfilFragment">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="10dp"
        android:text="@string/nombreUsuario"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="151dp"
        android:layout_height="153dp"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/foto"
            android:src="@drawable/icon_camara" />

        <!-- ShapeableImageView. Permite mostrar imágenes con formas personalizadas, como círculos, esquinas redondeadas, etc. -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fotoperfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_face"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/design_default_color_primary"
            app:strokeWidth="5dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/publicaciones"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/seguidores"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/seguidos"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numPublicaciones"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numSeguidores"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numSeguidos"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/generoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/genero"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/descripcionPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/presentacionDescripcion"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editarPerfil"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:backgroundTint="@color/rosaPersonalizado"
            android:text="@string/editarDatos" />

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="10sp"
            android:backgroundTint="@color/rosaPersonalizado"
            android:text="@string/cerrarSesion" />

    </LinearLayout>

</LinearLayout>