<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal"
        android:background="@drawable/recycler_background">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fotoBuscar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_face"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/design_default_color_primary"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="167dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/generoBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noDefinido"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/seguirButton"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:backgroundTint="@color/rosaPersonalizado"
                android:text="@string/seguir"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>